# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.836 2010/06/01 03:19:33 robbat2 Exp $

  01 Jun 2010; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
  Bug #322327: deblob-2.6.34 missing from Manifest

*git-sources-2.6.35_rc1 (31 May 2010)

  31 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.35_rc1.ebuild:
  Version bump

*git-sources-2.6.34-r16 (30 May 2010)

  30 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34-r16.ebuild:
  Version bump

*git-sources-2.6.34-r15 (29 May 2010)

  29 May 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34-r15.ebuild:
  Version bump

*git-sources-2.6.34-r14 (28 May 2010)

  28 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34-r14.ebuild:
  Version bump

*git-sources-2.6.34-r13 (28 May 2010)

  28 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34-r13.ebuild:
  Version bump

*git-sources-2.6.34-r12 (27 May 2010)

  27 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34-r12.ebuild:
  Version bump

*git-sources-2.6.34-r11 (26 May 2010)

  26 May 2010; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.34_rc7.ebuild, -git-sources-2.6.34_rc7-r1.ebuild,
  -git-sources-2.6.34_rc7-r2.ebuild, -git-sources-2.6.34_rc7-r3.ebuild,
  -git-sources-2.6.34_rc7-r4.ebuild, -git-sources-2.6.34_rc7-r5.ebuild,
  -git-sources-2.6.34_rc7-r6.ebuild, -git-sources-2.6.34_rc7-r7.ebuild,
  -git-sources-2.6.34_rc7-r8.ebuild, -git-sources-2.6.34_rc7-r9.ebuild,
  +git-sources-2.6.34-r11.ebuild:
  Version bump

*git-sources-2.6.34-r10 (26 May 2010)

  26 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34-r10.ebuild:
  Version bump

*git-sources-2.6.34-r9 (25 May 2010)

  25 May 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34-r9.ebuild:
  Version bump

*git-sources-2.6.34-r8 (22 May 2010)