@@ -1,4 +1,6 @@
-DIST deblob-2.6.34 88276 RMD160 12f83200b74a9d859b7241b1e8d8c0250d8bcb90 SHA1 985bd73ebca8e720f92eb01d11c22e25d21865b6 SHA256 9478ada7a36f3858ef9ba3dc5c9609fb45fa9b286a002ccfba09045c81b217ed
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST linux-2.6.34.tar.bz2 67633622 RMD160 dafd721b00c13e3652405b517b379eed10020bf4 SHA1 4188857ba71f301991dc56285f593e9c311e5824 SHA256 fa395fec7de633df1cb85b6248b8f35af98380ed128a8bc465fb48bc4d252633
 DIST patch-2.6.34-git1.bz2 15993 RMD160 1fed84481756f2c0a2c09ad35b1ceaad65300d1a SHA1 262ecfda650582c5fe60d14de18e7b39a19b9f82 SHA256 16cb52bda549d7a9a2a02324d7bc65352a30969f19a6418df1e39b42bd560408
 DIST patch-2.6.34-git10.bz2 6520611 RMD160 132ee8a0ff36608399863a36f77f3281a382e529 SHA1 905f503891f5bdcbaf6c8fe9572bea8b0783740e SHA256 46877b35d4559f660e922936d6f48e3b3107e0abe8d4a9d62f270b3d31d3b9d3
@@ -16,6 +18,7 @@ DIST patch-2.6.34-git6.bz2 3576070 RMD160 5595d4dc98790668449946c381079210451766
 DIST patch-2.6.34-git7.bz2 5592393 RMD160 63b3ce34b751a856d1fd1f3cc339f0282c8400e7 SHA1 71e4294bf7482621a4c9664af39d583f8dbd34e6 SHA256 18823bc00371b53d06da487f128e1393643b8003e1b53487fb8c3d4048aec5e6
 DIST patch-2.6.34-git8.bz2 5803692 RMD160 f7d01d8effdf50696664488ec05170d10a87acc5 SHA1 4d3233ccbfd731b2657b528d38a44a2366a460c5 SHA256 6dcbe38ab922e53f10c3dc3e57308c3ca5dc7ba1e45a79b3907af953838b0825
 DIST patch-2.6.34-git9.bz2 5949286 RMD160 01b33cb8035745f8e93c23a0137d514758a1afc5 SHA1 ec39f2e5bd80d20a18bfec011b6cb62f752a9cb1 SHA256 f5a2a6f5a96098332276beab5d358da02efa0abad85ba49b4888e39224334748
+DIST patch-2.6.35-rc1-git1.bz2 119526 RMD160 be74a56f5be33bae38e49dfe36f3c2db26f1ba8d SHA1 f870e9e5730875158ac426ffb8f46fc05bb52ff7 SHA256 eb600a9da4037e11167e08cc722706e5bafd98c5a5c3a51bc991832c29b2bcc2
 DIST patch-2.6.35-rc1.bz2 7021015 RMD160 60604f5fe50d22572feb0cb646a6d1caea8001a2 SHA1 7a10dbdf16f7f8ebf8ae3723833f09735b8413fa SHA256 79a2f43d53d1542f59ce76c7ea40741f80944181ee2634be9e344fb38d27f94d
 EBUILD git-sources-2.6.34-r1.ebuild 1242 RMD160 8d58fb2a36431954625b4cd2249e30ec2b7fa48f SHA1 51f05eade1f38bb1b5d4b0bb76cbbb7da0a3ebb3 SHA256 f71cb18bded449a9f9b032d5106fe247d247105a156ad2a2f6c3e4c11e317b4f
 EBUILD git-sources-2.6.34-r10.ebuild 1243 RMD160 92ba43ea3d28aeae45cc2ce2af21709c132e2cf9 SHA1 273750fe866e909ba3d86ca315cc7944212fa61a SHA256 1fb4bf91fcbd4643f41d506a1e8dcc781e04be43b6e4b9a27dc5041d9413dd50
@@ -33,6 +36,14 @@ EBUILD git-sources-2.6.34-r6.ebuild 1242 RMD160 f5f49a7d19711f192032a2944407b10f
 EBUILD git-sources-2.6.34-r7.ebuild 1242 RMD160 c7262363cd24d32db0463b7628209c151176da7f SHA1 600d35b005e1e549374930af4431221b4c5cefa3 SHA256 b1bb6754631524d87f0f93b944741104fa1eaa0ffe51e1dee38120536d2a70f1
 EBUILD git-sources-2.6.34-r8.ebuild 1242 RMD160 a201e70b306fef88630b8bbf4d0903d730816ac9 SHA1 5730575c97e4559ac13e473e5bd31a7b7a70e10e SHA256 9fde9ca2ca0d7a1b3e171c57058d07b84aa1845d7f12a9dfa2d10aa2baed5499
 EBUILD git-sources-2.6.34-r9.ebuild 1242 RMD160 1251095575cd7a4c99462d1861743d68d21e585b SHA1 c83512ab16eca55fafd2f1265eb51dd994032228 SHA256 81606df32f6aebd599c4bb1ecab543d113f44ab3411d9666156b188dd8784104
+EBUILD git-sources-2.6.35_rc1-r1.ebuild 1246 RMD160 0fc852ba94a56c507b6e44817c7fe99b70e65c84 SHA1 4be102b25db4647d428977723d2aed2476b3ae81 SHA256 9be553978231b09616bff0297bcf238d51918cae6030c3b0804e65190492e82b
 EBUILD git-sources-2.6.35_rc1.ebuild 1243 RMD160 237046851314a6cd25bb406baebe2678b4558edb SHA1 9e986d34aa001af5162cdcfbf63c0849c874aa49 SHA256 e57516962f9670c430eb5f873434ce2c30526a67ddd03343c1ffe7d618984aca
-MISC ChangeLog 160056 RMD160 0ce2a504c5e8ded5204d16bdb42ab7b7267a528d SHA1 413f7edd462f8b6f3345a8531b649c768802ec65 SHA256 eefe3d7b89049b600fe182d5e7b0b147303c2fc018cc3e92af26f4735fa7a70c
+MISC ChangeLog 160202 RMD160 c98fb2ac3ece352d3313c38e78271e8675826a7a SHA1 64f1ee03664247d02055182761f69a00763f33e1 SHA256 a4c087aa17c712d1a0d6e6cd5d9dd853089f477c07b92b56c9bb40b233c9d8c7
 MISC metadata.xml 567 RMD160 e4aa86f6f16e102f0e0704afd106f06c92662374 SHA1 d7d65c3a36a62994e6bf60d4d7e101971ec8feb8 SHA256 5e47ce9a1dc6123cba8515903fa09559bf76a652c79e248bc940ec154fb03546
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iEYEARECAAYFAkwGVhEACgkQPDPGULV25ONrOQCcDUDR+aeef91R2YZLzMgIxwTz
+V4AAn02LcLbMnCYXAULLtDLqjCSpIajM
+=cXcY
+-----END PGP SIGNATURE-----
