@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.836 2010/06/01 03:19:33 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.837 2010/06/02 12:57:19 mpagano Exp $
+
+*git-sources-2.6.35_rc1-r1 (02 Jun 2010)
+
+  02 Jun 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.35_rc1-r1.ebuild:
+  Version bump
 
   01 Jun 2010; Robin H. Johnson <robbat2@gentoo.org> metadata.xml:
   Bug #322327: deblob-2.6.34 missing from Manifest
